Fix meta description

--- a/content/posts/2023-11-12_New_Blog.md
+++ b/content/posts/2023-11-12_New_Blog.md
@@ -1,6 +1,6 @@
 ---
 title: New Blog
-tagline: Moving from Gatsby to Eleventy and breaking a three-and-a-half-year writing hiatus.
+description: Moving from Gatsby to Eleventy and breaking a three-and-a-half-year writing hiatus.
 date: 2023-11-12
 permalink: new-blog/
 tags: post
@@ -17,7 +17,7 @@ In considering relaunching the blog and beginning to write again, I didn’t jus
 
 I was tempted to redesign everything, but in the spirit of trying to actually write again instead of spending forever just working on the site, decided not to. I made a few small changes that I’m really happy with:
 
-- Posts on the [index page](/) now have an intentional tagline/description, rendered in a sans-serif, instead of an arbitrary truncation of the post content. I bought the regular weight of [Founders Grotesk](https://klim.co.nz/retail-fonts/founders-grotesk/) for this purpose, which I previously had only in medium for photo captions, footer text, and the About page link. I replaced some of these uses with the regular weight and like the way it lightened things up a bit.
+- Posts on the [index page](/) now have an intentional description, rendered in a sans-serif, instead of an arbitrary truncation of the post content. I bought the regular weight of [Founders Grotesk](https://klim.co.nz/retail-fonts/founders-grotesk/) for this purpose, which I previously had only in medium for photo captions, footer text, and the About page link. I replaced some of these uses with the regular weight and like the way it lightened things up a bit.
 - I removed the light/dark switcher in favor of using the system preference unconditionally.
 - Code blocks always use a dark theme instead of switching between light and dark with the rest of the site. I am not anti-light-theme for code but I didn’t like the way it looked in this context. I also updated the dark theme colors to match VS Code’s new Dark Modern, which is the best syntax theme, having recently taken the crown over the previous best, VS Code’s Default Dark+.
 - Links in post bodies are now permanently underlined with no hover effect, and have the same color as normal body text. They used to be blue, with an underline on hover.
